# csci262_pooh_bear_intrusion_detection_modeling

./: .gitignore  CMakeLists.txt  README.md  Report.md  requirements.txt
references/: poisson_process_python_test.ipynb  poisson_process_python_test.md  taocp_vol02_chapter02.md
src/: A3_REPORT.md  ActivityEngine.cpp  ActivityEngine.h  AlertEngine.cpp  AlertEngine.h  AnalysisEngine.cpp  AnalysisEngine.h  Config.h  Exit_ascii  Exit_ascii_2  Helper.cpp  Helper.h  Logger.cpp  Logger.h  Stats_Test.txt  TrafficEngine.cpp  TrafficEngine.h  Utils.cpp  Utils.h  Vehicles.cpp  Vehicles.h  Welcome_ascii  Welcome_ascii_2  main.cpp  plotting.py  start.sh  traffic.cpp
src/data/: normal.csv  poisson.csv
src/logs/: logs_baseline  test.txt
